tests/negative/test_sym_type_undef_fixed.orb
data Foo;

fixed Bar Foo;

fnc main () () {
    sym x:Bar;
};